[project]
name = "pool"
authors = [
    { name = "Sergey Dobrikov", email = "sergey.dobrikov@waveaccess.com"}
]
description = "Pools Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[project.urls]
Homepage = "https://github.com/celtdev/hrms_pool/blob/master/README.md"
Repository = "https://github.com/celtdev/hrms_pool.git"
"Bug Reports" = "https://github.com/celtdev/hrms_pool/issues"